# aws-s3

./: Cargo.toml  readme.md  test-upload.txt
aws-integration-test/: Download Files.bru  Upload Files.bru  bruno.json
src/: entities.rs  error.rs  main.rs  utils.rs
src/routes/: download.rs  mod.rs  upload.rs
